--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "redux-simple-starter",
   "version": "1.0.0",
   "engines": {
-    "node": "8.7.0"
-  },
+    "node": "8.7.0",
+    "npm":"5.4.2",
+    "webpack":"1.15.0"
+    },
   "description": "Simple starter package for Redux with React and Babel support",
   "main": "index.js",
   "repository": "git@github.com:StephenGrider/ReduxSimpleStarter.git",
