--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
     "react-router-dom": "^4.0.0",
     "redux": "^3.0.4",
     "redux-form": "^6.6.3",
-    "redux-promise": "^0.5.3",
-    "express": "4.15.5"
+    "redux-promise": "^0.5.3"
   }
 }
